--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "hahaha",
+    "name": "depot-demo",
     "scripts": {
         "start": "node_modules/.bin/dpt start"
     },
     "dependencies": {
-        "dpt": "~0.1.1",
-        "dpt-docs": "~0.1.3"
+        "dpt": "0.2.x",
+        "dpt-docs": "0.2.x"
     }
 }
